# flyreel-panorama-ios

./: FlyreelPanorama.podspec  LICENSE  Package.swift  README.md
FlyreelPanorama.xcframework/: Info.plist
FlyreelPanorama.xcframework/ios-arm64/FlyreelPanorama.framework/: Assets.car  CMakeLists.txt  Info.plist  default.metallib  dot-progress-med-fade-thin.json
FlyreelPanorama.xcframework/ios-arm64/FlyreelPanorama.framework/Headers/: FlyreelPanorama-Swift.h
FlyreelPanorama.xcframework/ios-arm64/FlyreelPanorama.framework/Modules/: module.modulemap
FlyreelPanorama.xcframework/ios-arm64/FlyreelPanorama.framework/Modules/FlyreelPanorama.swiftmodule/: arm64-apple-ios.abi.json  arm64-apple-ios.swiftdoc  arm64-apple-ios.swiftinterface
FlyreelPanorama.xcframework/ios-arm64/FlyreelPanorama.framework/_CodeSignature/: CodeResources
FlyreelPanorama.xcframework/ios-arm64/dSYMs/FlyreelPanorama.framework.dSYM/Contents/: Info.plist
FlyreelPanorama.xcframework/ios-arm64/dSYMs/FlyreelPanorama.framework.dSYM/Contents/Resources/Relocations/aarch64/: FlyreelPanorama.yml
FlyreelPanorama.xcframework/ios-arm64_x86_64-simulator/FlyreelPanorama.framework/: Assets.car  CMakeLists.txt  Info.plist  arrow-bounce.json  default.metallib
FlyreelPanorama.xcframework/ios-arm64_x86_64-simulator/FlyreelPanorama.framework/Headers/: FlyreelPanorama-Swift.h
FlyreelPanorama.xcframework/ios-arm64_x86_64-simulator/FlyreelPanorama.framework/Modules/FlyreelPanorama.swiftmodule/: arm64-apple-ios-simulator.abi.json  arm64-apple-ios-simulator.private.swiftinterface  arm64-apple-ios-simulator.swiftdoc  arm64-apple-ios-simulator.swiftinterface  x86_64-apple-ios-simulator.swiftdoc  x86_64-apple-ios-simulator.swiftinterface
FlyreelPanorama.xcframework/ios-arm64_x86_64-simulator/FlyreelPanorama.framework/_CodeSignature/: CodeResources
FlyreelPanorama.xcframework/ios-arm64_x86_64-simulator/FlyreelPanorama.framework/en.lproj/: Localizable.strings
FlyreelPanorama.xcframework/ios-arm64_x86_64-simulator/dSYMs/FlyreelPanorama.framework.dSYM/Contents/: Info.plist
FlyreelPanorama.xcframework/ios-arm64_x86_64-simulator/dSYMs/FlyreelPanorama.framework.dSYM/Contents/Resources/Relocations/aarch64/: FlyreelPanorama.yml
FlyreelPanorama.xcframework/ios-arm64_x86_64-simulator/dSYMs/FlyreelPanorama.framework.dSYM/Contents/Resources/Relocations/x86_64/: FlyreelPanorama.yml
